# aiomono

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
aiomono/: __init__.py  client.py  exceptions.py  signature.py  types.py  utils.py
aiomonobank/: __init__.py  client.py  dataclasses.py
