[tool.poetry]
name = "aiomono"
version = "1.0.1"
description = "The asynchronous library for monobank API"
authors = ["Archie <arturboyun@gmail.com>"]
license = "MIT"
repository = "https://github.com/archiesir/aiomono"
homepage = "https://github.com/archiesir/aiomono"
readme = 'README.md'
keywords = [
    "monobank",
    "client",
    "api",
    "library",
    "aiohttp",
    "asyncio",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
